# options-collect

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: upload_options_to_s3.py
scripts/_options_pipeline/: __init__.py  config.py  converter.py  extractor.py  preflight.py  shutdown.py  state.py  uploader.py  validator.py
tests/test_pipeline/: test_extractor.py  test_pipeline_integration.py  test_preflight.py  test_shutdown.py  test_state.py  test_upload.py
