[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cxq-data"
version = "0.1.0"
description = "Stock market data ingestion, normalization, storage, and serving infrastructure."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "yfinance>=0.2.40,<1.0",
    "polars>=1.0,<2.0",
    "pyarrow>=17.0",
    "duckdb>=1.1,<2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
pipeline = [
    "databento>=0.43",
    "boto3>=1.35",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "moto[s3]>=5.0",
]

[project.scripts]
cxq_data = "CXq_data.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/CXq_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
